@@ -10,6 +10,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * @author mucd
@@ -29,7 +30,7 @@ public class Test extends HttpServlet {
         //获取绝对路径.通过servletContext()
         String path= this.getServletContext().getRealPath("abc.txt");
         //设置请求的头信息，第一参数：头的名称,第二参数：头值，URLEncoder.encode()转编码值
-        response.setHeader("content-disposition", "attachment;filename="+URLEncoder.encode(path.substring(path.lastIndexOf("\\")+1),"utf-8") );
+        response.setHeader("content-disposition", "attachment;filename="+URLEncoder.encode(path.substring(path.lastIndexOf("\\")+1), StandardCharsets.UTF_8) );
         try (FileInputStream in = new FileInputStream(path)) {
             byte[] img = new byte[1024];
             int length;
